projects/rhodes.akn/src/infrastructure/kubernetes/external-secrets/security/network-policy.allow-intra-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Permits intra-namespace communication in the external-secrets-system namespace.
  name: allow-intra-namespace
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets-system
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets-system
